--- a/memento/summarycube.ipynb
+++ b/memento/summarycube.ipynb
@@ -305,6 +305,196 @@
     "    data=summary_list,\n",
     "    columns=['celltype', 'study', 'gene', 'mean', 'SEM', 'variance', 'SEV', 'SELV'])"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 98,
+   "id": "d53bcd25-aa20-4d27-8513-cd507623d7e6",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>celltype</th>\n",
+       "      <th>study</th>\n",
+       "      <th>gene</th>\n",
+       "      <th>mean</th>\n",
+       "      <th>SEM</th>\n",
+       "      <th>variance</th>\n",
+       "      <th>SEV</th>\n",
+       "      <th>SELV</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>cell_A</td>\n",
+       "      <td>study_A</td>\n",
+       "      <td>DPROO</td>\n",
+       "      <td>0.019060</td>\n",
+       "      <td>0.005018</td>\n",
+       "      <td>0.006319</td>\n",
+       "      <td>0.002423</td>\n",
+       "      <td>0.430679</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>cell_A</td>\n",
+       "      <td>study_A</td>\n",
+       "      <td>RBWHQ</td>\n",
+       "      <td>0.005173</td>\n",
+       "      <td>0.001173</td>\n",
+       "      <td>0.000345</td>\n",
+       "      <td>0.000183</td>\n",
+       "      <td>0.574223</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>cell_A</td>\n",
+       "      <td>study_A</td>\n",
+       "      <td>KLJVY</td>\n",
+       "      <td>0.005586</td>\n",
+       "      <td>0.001163</td>\n",
+       "      <td>0.000340</td>\n",
+       "      <td>0.000142</td>\n",
+       "      <td>0.478284</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>cell_A</td>\n",
+       "      <td>study_A</td>\n",
+       "      <td>EFDAQ</td>\n",
+       "      <td>0.015482</td>\n",
+       "      <td>0.003179</td>\n",
+       "      <td>0.002536</td>\n",
+       "      <td>0.000972</td>\n",
+       "      <td>0.409071</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>cell_A</td>\n",
+       "      <td>study_A</td>\n",
+       "      <td>ITOEA</td>\n",
+       "      <td>0.008931</td>\n",
+       "      <td>0.002161</td>\n",
+       "      <td>0.001172</td>\n",
+       "      <td>0.000462</td>\n",
+       "      <td>0.432632</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>395</th>\n",
+       "      <td>cell_B</td>\n",
+       "      <td>study_B</td>\n",
+       "      <td>DZWUF</td>\n",
+       "      <td>0.010766</td>\n",
+       "      <td>0.002682</td>\n",
+       "      <td>0.002029</td>\n",
+       "      <td>0.001135</td>\n",
+       "      <td>0.599446</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>396</th>\n",
+       "      <td>cell_B</td>\n",
+       "      <td>study_B</td>\n",
+       "      <td>RFIGW</td>\n",
+       "      <td>0.009962</td>\n",
+       "      <td>0.002397</td>\n",
+       "      <td>0.001620</td>\n",
+       "      <td>0.000598</td>\n",
+       "      <td>0.414875</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>397</th>\n",
+       "      <td>cell_B</td>\n",
+       "      <td>study_B</td>\n",
+       "      <td>LECNU</td>\n",
+       "      <td>0.015523</td>\n",
+       "      <td>0.004119</td>\n",
+       "      <td>0.004785</td>\n",
+       "      <td>0.002149</td>\n",
+       "      <td>0.499948</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>398</th>\n",
+       "      <td>cell_B</td>\n",
+       "      <td>study_B</td>\n",
+       "      <td>ZFLOA</td>\n",
+       "      <td>0.009193</td>\n",
+       "      <td>0.001866</td>\n",
+       "      <td>0.000982</td>\n",
+       "      <td>0.000392</td>\n",
+       "      <td>0.419434</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>399</th>\n",
+       "      <td>cell_B</td>\n",
+       "      <td>study_B</td>\n",
+       "      <td>ILEGJ</td>\n",
+       "      <td>0.009010</td>\n",
+       "      <td>0.002654</td>\n",
+       "      <td>0.001986</td>\n",
+       "      <td>0.000923</td>\n",
+       "      <td>0.543590</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>400 rows × 8 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    celltype    study   gene      mean       SEM  variance       SEV      SELV\n",
+       "0     cell_A  study_A  DPROO  0.019060  0.005018  0.006319  0.002423  0.430679\n",
+       "1     cell_A  study_A  RBWHQ  0.005173  0.001173  0.000345  0.000183  0.574223\n",
+       "2     cell_A  study_A  KLJVY  0.005586  0.001163  0.000340  0.000142  0.478284\n",
+       "3     cell_A  study_A  EFDAQ  0.015482  0.003179  0.002536  0.000972  0.409071\n",
+       "4     cell_A  study_A  ITOEA  0.008931  0.002161  0.001172  0.000462  0.432632\n",
+       "..       ...      ...    ...       ...       ...       ...       ...       ...\n",
+       "395   cell_B  study_B  DZWUF  0.010766  0.002682  0.002029  0.001135  0.599446\n",
+       "396   cell_B  study_B  RFIGW  0.009962  0.002397  0.001620  0.000598  0.414875\n",
+       "397   cell_B  study_B  LECNU  0.015523  0.004119  0.004785  0.002149  0.499948\n",
+       "398   cell_B  study_B  ZFLOA  0.009193  0.001866  0.000982  0.000392  0.419434\n",
+       "399   cell_B  study_B  ILEGJ  0.009010  0.002654  0.001986  0.000923  0.543590\n",
+       "\n",
+       "[400 rows x 8 columns]"
+      ]
+     },
+     "execution_count": 98,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "summary"
+   ]
   }
  ],
  "metadata": {
