--- a/memento/hypothesis_test.ipynb
+++ b/memento/hypothesis_test.ipynb
@@ -32,6 +32,227 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 49,
+   "id": "1fad0247-8634-4ee6-9d83-17e8504b4344",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import tiledb\n",
+    "estimators = tiledb.open('estimators_cube_test').df[:]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "id": "c6d7c179-2a7e-4ab4-8552-8e8b982d8452",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<function numpy.nansum(a, axis=None, dtype=None, out=None, keepdims=<no value>, initial=<no value>, where=<no value>)>"
+      ]
+     },
+     "execution_count": 50,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.nansum"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "id": "069a50c1-2f47-45f4-b05f-4f2d0ba2d744",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>cell_type</th>\n",
+       "      <th>dataset_id</th>\n",
+       "      <th>assay</th>\n",
+       "      <th>suspension_type</th>\n",
+       "      <th>donor_id</th>\n",
+       "      <th>disease</th>\n",
+       "      <th>sex</th>\n",
+       "      <th>feature_id</th>\n",
+       "      <th>nnz</th>\n",
+       "      <th>n_obs</th>\n",
+       "      <th>min</th>\n",
+       "      <th>max</th>\n",
+       "      <th>sum</th>\n",
+       "      <th>mean</th>\n",
+       "      <th>sem</th>\n",
+       "      <th>var</th>\n",
+       "      <th>sev</th>\n",
+       "      <th>selv</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>CD14-positive monocyte</td>\n",
+       "      <td>86282760-5099-4c71-8cdd-412dcbbbd0b9</td>\n",
+       "      <td>10x 5' v1</td>\n",
+       "      <td>cell</td>\n",
+       "      <td>D1</td>\n",
+       "      <td>Down syndrome</td>\n",
+       "      <td>male</td>\n",
+       "      <td>ENSG00000135636</td>\n",
+       "      <td>26.0</td>\n",
+       "      <td>320.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>60.0</td>\n",
+       "      <td>0.190031</td>\n",
+       "      <td>0.001609</td>\n",
+       "      <td>0.193269</td>\n",
+       "      <td>0.057532</td>\n",
+       "      <td>0.318559</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>CD14-positive monocyte</td>\n",
+       "      <td>86282760-5099-4c71-8cdd-412dcbbbd0b9</td>\n",
+       "      <td>10x 5' v1</td>\n",
+       "      <td>cell</td>\n",
+       "      <td>D2</td>\n",
+       "      <td>Down syndrome</td>\n",
+       "      <td>female</td>\n",
+       "      <td>ENSG00000135636</td>\n",
+       "      <td>22.0</td>\n",
+       "      <td>320.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>42.0</td>\n",
+       "      <td>0.133956</td>\n",
+       "      <td>0.001020</td>\n",
+       "      <td>0.168847</td>\n",
+       "      <td>0.067813</td>\n",
+       "      <td>0.462170</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>CD14-positive monocyte</td>\n",
+       "      <td>86282760-5099-4c71-8cdd-412dcbbbd0b9</td>\n",
+       "      <td>10x 5' v1</td>\n",
+       "      <td>cell</td>\n",
+       "      <td>D3</td>\n",
+       "      <td>Down syndrome</td>\n",
+       "      <td>male</td>\n",
+       "      <td>ENSG00000135636</td>\n",
+       "      <td>20.0</td>\n",
+       "      <td>320.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>40.0</td>\n",
+       "      <td>0.127726</td>\n",
+       "      <td>0.000967</td>\n",
+       "      <td>0.077762</td>\n",
+       "      <td>0.024635</td>\n",
+       "      <td>0.355276</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>CD14-positive monocyte</td>\n",
+       "      <td>86282760-5099-4c71-8cdd-412dcbbbd0b9</td>\n",
+       "      <td>10x 5' v1</td>\n",
+       "      <td>cell</td>\n",
+       "      <td>D4</td>\n",
+       "      <td>Down syndrome</td>\n",
+       "      <td>male</td>\n",
+       "      <td>ENSG00000135636</td>\n",
+       "      <td>87.0</td>\n",
+       "      <td>320.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>155.0</td>\n",
+       "      <td>0.485981</td>\n",
+       "      <td>0.002714</td>\n",
+       "      <td>0.493239</td>\n",
+       "      <td>0.109993</td>\n",
+       "      <td>0.231134</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>CD14-positive monocyte</td>\n",
+       "      <td>86282760-5099-4c71-8cdd-412dcbbbd0b9</td>\n",
+       "      <td>10x 5' v1</td>\n",
+       "      <td>cell</td>\n",
+       "      <td>pooled</td>\n",
+       "      <td>Down syndrome</td>\n",
+       "      <td>male</td>\n",
+       "      <td>ENSG00000135636</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>320.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.006231</td>\n",
+       "      <td>0.000010</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                cell_type                            dataset_id      assay   \n",
+       "0  CD14-positive monocyte  86282760-5099-4c71-8cdd-412dcbbbd0b9  10x 5' v1  \\\n",
+       "1  CD14-positive monocyte  86282760-5099-4c71-8cdd-412dcbbbd0b9  10x 5' v1   \n",
+       "2  CD14-positive monocyte  86282760-5099-4c71-8cdd-412dcbbbd0b9  10x 5' v1   \n",
+       "3  CD14-positive monocyte  86282760-5099-4c71-8cdd-412dcbbbd0b9  10x 5' v1   \n",
+       "4  CD14-positive monocyte  86282760-5099-4c71-8cdd-412dcbbbd0b9  10x 5' v1   \n",
+       "\n",
+       "  suspension_type donor_id        disease     sex       feature_id   nnz   \n",
+       "0            cell       D1  Down syndrome    male  ENSG00000135636  26.0  \\\n",
+       "1            cell       D2  Down syndrome  female  ENSG00000135636  22.0   \n",
+       "2            cell       D3  Down syndrome    male  ENSG00000135636  20.0   \n",
+       "3            cell       D4  Down syndrome    male  ENSG00000135636  87.0   \n",
+       "4            cell   pooled  Down syndrome    male  ENSG00000135636   1.0   \n",
+       "\n",
+       "   n_obs  min  max    sum      mean       sem       var       sev      selv  \n",
+       "0  320.0  1.0  6.0   60.0  0.190031  0.001609  0.193269  0.057532  0.318559  \n",
+       "1  320.0  1.0  5.0   42.0  0.133956  0.001020  0.168847  0.067813  0.462170  \n",
+       "2  320.0  1.0  4.0   40.0  0.127726  0.000967  0.077762  0.024635  0.355276  \n",
+       "3  320.0  1.0  5.0  155.0  0.485981  0.002714  0.493239  0.109993  0.231134  \n",
+       "4  320.0  1.0  1.0    1.0  0.006231  0.000010  0.000000  0.000000  0.000000  "
+      ]
+     },
+     "execution_count": 51,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "estimators"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 15,
    "id": "28c8c1d7-02b8-473d-9a01-777636ddf718",
    "metadata": {},
